--- a/main.html
+++ b/main.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <title>Document</title>
 </head>
 <body>
-    <p id="yellow" style="background: yellow; border-width: 1px; border-color: green;"></p>
-    <p id="red" style="background: red;border-width: 1px; border-color: black;"></p>
-    <p id="green" style="background: green; border-width: 1px; border-color: yellow"></p>
+    <p id="yellow" style="background: yellow; border-width: 1px; border-color: green;">paragraph-1</p>
+    <p id="red" style="background: red;border-width: 1px; border-color: black;">paragraph-2</p>
+    <p id="green" style="background: green; border-width: 1px; border-color: yellow"> paragraph-3</p>
 </body>
 </html>
