--- a/main.html
+++ b/main.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
 </head>
 <body>
-    <p id="yellow" style="background-color: yellow; border-width: 1px; border-color: green;">paragraph-1</p>
+    <p id="yellow" style="background-color: yellow; border-width: 1px;border-color:green">paragraph-1</p>
     <p id="red" style="background-color: red;border-width: 1px; border-color: black;">paragraph-2</p>
     <p id="green" style="background-color: green; border-width: 1px; border-color: yellow"> paragraph-3</p>
 </body>
